--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
     </header>
 
     <section class="formulier">
-        <h1>full dit in dan contacten we u gauw!</h1>
+        <h1>vull dit in dan contacten we u gauw!</h1>
         <form method="post" action="">
             <input placeholder="Voornaam" type="text" name="voornaam" id="voorn" required>
             <input placeholder="Achternaam" type="text" name="achternaam" id="achtern" required>
