--- a/pages/mijncv.html
+++ b/pages/mijncv.html
@@ -11,8 +11,8 @@
     <header class="navbar"> 
         <div>
             <a href="../index.html">Home</a>
-            <a href="./mijncv.html">Mijncv</a>
-            <a href="./contact.html">Contacts</a>
+            <a href="./mijncv.html">Mijn cv</a>
+            <a href="./contact.html">Contact</a>
         </div> 
     </header>
 
