--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <header class="navbar"> 
         <div>
-            <a href="../index.html">Home</a>
-            <a href="./mijncv.html">Mijn cv</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./index.html">Home</a>
+            <a href="./pages/mijncv.html">Mijn cv</a>
+            <a href="./pages/contact.html">Contact</a>
         </div> 
         </header>
 
